--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/styled-jsx": "^2.2.8",
+    "axios": "^0.19.2",
     "final-form": "^4.20.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
