--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/dom-to-image": "^2.6.1",
+    "@types/file-saver": "^2.0.1",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/styled-jsx": "^2.2.8",
     "axios": "^0.19.2",
+    "dom-to-image": "^2.6.0",
+    "file-saver": "^2.0.2",
     "final-form": "^4.20.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
