--- a/package.json
+++ b/package.json
@@ -11,16 +11,23 @@
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
+    "@types/react-color": "^3.0.2",
     "@types/react-dom": "^16.9.0",
+    "@types/react-final-form-listeners": "^1.0.0",
+    "@types/reactcss": "^1.2.3",
     "@types/styled-jsx": "^2.2.8",
     "axios": "^0.19.2",
     "dom-to-image": "^2.6.0",
     "file-saver": "^2.0.2",
     "final-form": "^4.20.0",
     "react": "^16.13.1",
+    "react-color": "^2.18.1",
     "react-dom": "^16.13.1",
-    "react-final-form": "^6.5.0",
+    "react-final-form-listeners": "^1.0.2",
     "react-scripts": "3.4.1",
+    "react-tooltip": "^4.2.6",
+    "react-tooltip-lite": "^1.12.0",
+    "reactcss": "^1.2.3",
     "typescript": "~3.7.2"
   },
   "scripts": {
